--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-bootstrap-typeahead": "^3.4.6",
