--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-bootstrap-typeahead": "^3.4.6",
+    "react-content-loader": "^4.2.2",
     "react-dom": "^16.9.0",
     "react-inlinesvg": "^1.1.6",
+    "react-loader-spinner": "^3.1.4",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-transition-group": "^4.2.2",
+    "react-toggle": "^4.0.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "store": "^2.0.12",
