--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-content-loader": "^4.2.2",
     "react-dom": "^16.9.0",
     "react-inlinesvg": "^1.1.6",
-    "react-loader-spinner": "^3.1.4",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
