--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 
 # misc
 .DS_Store
-/.vscode
+**/.vscode/
 .env.local
 .env.development.local
 .env.test.local
@@ -24,5 +24,5 @@ yarn-debug.log*
 yarn-error.log*
 
 # files
-check
-*.log
+**/check
+**/*.log
