--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@
 
 # misc
 .DS_Store
-**/.vscode/
 .env.local
 .env.development.local
 .env.test.local
@@ -26,3 +25,21 @@ yarn-error.log*
 # files
 **/check
 **/*.log
+
+
+
+# Created by https://www.gitignore.io/api/visualstudiocode
+# Edit at https://www.gitignore.io/?templates=visualstudiocode
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+# End of https://www.gitignore.io/api/visualstudiocode
